# project-kraken

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  USAGE.md  demo.py  pyproject.toml  simple_demo.py  tmp.md  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: devops-expert.agent.md  product-owner.agent.md  tech-lead.agent.md
.github/instructions/: agents.instructions.md  angular.instructions.md  python.instructions.md
.github/skills/i-have-adhd/: SKILL.md
.github/workflows/: build-verification.yml  docs.yml
central_knowledge_base/: __init__.py  cli.py
central_knowledge_base/api/: __init__.py
central_knowledge_base/config/: __init__.py
central_knowledge_base/connectors/: __init__.py  confluence.py  git.py  jira.py
central_knowledge_base/graph/: __init__.py
central_knowledge_base/rag/: __init__.py
config/: config.example.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  README.md
environment/: docker-compose.yml
environment/ollama/: Dockerfile  init.sh
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
frontend/src/environments/: environment.prod.ts  environment.ts
frontend/src/sidebar/: sidebar.component.html  sidebar.component.scss  sidebar.component.ts
scripts/: copy_docs.sh
src/: main.py  playground.ipynb
src/agents/: __init__.py
src/api/: __init__.py
src/api/routers/: assets.py  auth.py  chat.py  config.py  graph.py  index.py
src/common/: models.py
src/config/: __init__.py
src/core/: chat_memory.py  chunk_retriever.py  document_chunk_writer.py  knowledge_graph_service.py  knowledge_index.py  link_extractor.py  question_answering.py  relationship_manager.py  session_agent_manager.py  settings.py
src/core/atlassian/: __init__.py  confluence_loader.py  jira_loader.py
src/core/auth/: __init__.py  mcp_discovery.py  models.py  oauth_service.py  session_store.py
src/core/git/: github_loader.py
src/tools/: __init__.py  atlassian_mcp.py  fetch_neighbors_tool.py  filter_docs_tool.py  github_mcp.py  graph_query_tool.py  mcp_oauth_tools.py  rag_search_tool.py
tests/: __init__.py  test_basic.py
(+19 files in other folders)
