[project]
name = "central-knowledge-base"
version = "0.1.0"
description = ""
authors = [
    {name = "TrisNol",email = "contact@trisnol.dev"}
]
license = {text = "Apache-2.0 License"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-ollama (>=0.3.8,<0.4.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langchain-neo4j (>=0.5.0,<0.6.0)",
    "atlassian-python-api (>=4.0.7,<5.0.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "langgraph (>=0.6.8,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
