[project]
name = "central-knowledge-base"
version = "0.1.0"
description = ""
authors = [
    {name = "TrisNol",email = "contact@trisnol.dev"}
]
license = {text = "Apache-2.0 License"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "atlassian-python-api (>=4.0.7,<5.0.0)",
    "haystack-ai (>=2.18.1,<3.0.0)",
    "ollama-haystack (>=5.2.0,<6.0.0)",
    "neo4j-haystack (>=2.2.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
